Split mod into base and submodules for specific Minecraft versions